--- a/index.html
+++ b/index.html
@@ -9,26 +9,43 @@
     <nav>
       <div>
         <ul>
-          <a href="/index1.html"><li>Home</li></a>
-          <a href="index2.html"><li>About</li></a>
-          <a href="index3.html"><li>Work</li></a>
-          <a href="index4.html"><li>Resume</li></a>
-          <a href="index5.html"> <li>Contact</li></a>
+          <a href=""><li>Home</li></a>
+          <a href=""><li>About</li></a>
+          <a href=""><li>Work</li></a>
+          <a href=""><li>Resume</li></a>
+          <a href=""> <li>Contact</li></a>
         </ul>
       </div>
     </nav>
 
     <main>
-      <footer>
-        <p>Here is the footer</p>
+      <div>
+        <video
+          src="/vecteezy_hello-neon-light-title-animation-on-wall-great-for_23960299.mp4"
+          width="500px"
+          autoplay="1s"
+          loop="2s"
+        ></video>
+      </div>
+      <section>
         <div>
-          <a href="/index1.html"><li>Home</li></a>
-          <a href="index2.html"><li>About</li></a>
-          <a href="index3.html"><li>Work</li></a>
-          <a href="index4.html"><li>Resume</li></a>
-          <a href="index5.html"> <li>Contact</li></a>
+          <h2>Home</h2>
         </div>
-      </footer>
+        <div><h2>About</h2></div>
+        <div><h2>Work</h2></div>
+        <div><h2>Resume</h2></div>
+        <div><h2>Contact</h2></div>
+      </section>
     </main>
+    <footer>
+      <p>Here is the footer</p>
+      <div>
+        <a href=""><li>Home</li></a>
+        <a href=""><li>About</li></a>
+        <a href=""><li>Work</li></a>
+        <a href=""><li>Resume</li></a>
+        <a href=""> <li>Contact</li></a>
+      </div>
+    </footer>
   </body>
 </html>
